
2012-01-10  Hyo-Kyung (Joe) Lee  <hyoklee@hdfgroup.org>

	* Makefile.am: added hdfdesc.h

2012-01-10  hyoklee

	added the missing file that caused RPM build failure with
	--with-hdfeos2 option.

2012-01-09  James Gallagher <jgallagher@opendap.org>

	Code review.

2012-01-09  hyoklee

	Corrected scale/offset for MODIS products. Added LAMAZ/SOM
	projection support. See ChangeLog for details.

2012-01-09  Hyo-Kyung (Joe) Lee  <hyoklee@hdfgroup.org>

	* configure.ac: changed version number to 3.9.4.
	* hdf4_handler.spec: changed version number to 3.9.4.
	* hdfesc.cc: improved MODIS scale/offset handling and OBPG support.
	* hdfdesc.h: added for MODIS and MISR product support.
	* HDEEOPS2ArrayGridGeoField.cc: added SOM projection support.
	* HDEEOPS2ArrayGridGeoField. (CalculateSpeLatLon)h: renamed to
	CalculateLAMAZLatLon().
	* HDFEOS2Array_RealField.cc: corrected scale/offset application in
	MODIS products.
	* HDFEOS2ArraySwathDimMapField.cc: corrected scale/offset application in
	MODIS products.
	* Makefile.am: added files for MISR product support.
	* misr_init.cc, misrinv.cc, misrproj.h, errormacros.h: added.

2012-01-06  Hyo-Kyung (Joe) Lee  <hyoklee@hdfgroup.org>

	* HE2CFUniqName.cc (set_uniq_name): removed exit(-1) function.

2011-12-22  Hyo-Kyung (Joe) Lee  <hyoklee@hdfgroup.org>
	* HDFSP.cc (File::prepare): Replaced map[key]=val assignments for 
	string:string map.
	* HDFEOS2.cc (insert_map): is added. Replaced map[key]=val assignments
	for string:string map.

2011-08-18  James Gallagher <jgallagher@opendap.org>

	Added tests that verfiy the most recent fixes to the handler -
	tickets 1793 and 1797.

	M    bes-testsuite/hdf4_handlerTest.at
	A    bes-testsuite/h4/1C21.19980101.00539.7.hdf.ddx.bescmd
	A    bes-testsuite/h4/foo2.hdf.das.bescmd
	A    bes-testsuite/h4/foo2.hdf.dds.bescmd
	A    bes-testsuite/h4/foo2.hdf.dds.bescmd.baseline
	A    bes-testsuite/h4/foo2.hdf.ddx.bescmd.baseline
	A    bes-testsuite/h4/1990-S1700101.HDF.dds.bescmd